test/tests/WrongGenericParameterCount.panda
def a:Array<Int, String>

def b:HashMap<String>
